--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 .hero {
     color: white;
  }
+ .namee {
+     width: 30vw;
+     color: white;
+ }
+ .txt {
+    width: 20vw;
+    height: 30vh;
+    color: white;
+ }
+ label {
+     color: white;
+ }
